fixed alignment of weather temp

--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -47,8 +47,6 @@ body{
     display: grid;
     grid-row: 1;
     grid-column: 2;
-    margin-top: 2.5px;
-
 }
 
 .searchForm{
