--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -14,6 +14,8 @@
         grid-row: 2;
         grid-column: 1 / 5;
     }
+
+
     .time{
         display: grid;
         grid-row: 1;
@@ -24,12 +26,6 @@
         display: grid;
         grid-row: 1;
         grid-column: 4;
-        align-items: center;
-        justify-items: center;
-    }
-
-    #temp{
-        margin-top: 1.5vh;
     }
 
     .searchForm{
